# fdcl_serialization

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  fdcl_serial.cpp  fdcl_serial.h  test_fdcl_serial.cpp
docs/: .Doxyfile.swp  Doxyfile  home.md  index.md
docs/html/: annotated.html  classes.html  classfdcl_1_1serial-members.html  classfdcl_1_1serial.html  dir_87d64f96d35383433c887a81c65864f9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  md_index.html  pages.html  serial_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_7.js  all_8.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  searchdata.js  variables_1.js
include/fdcl/: serial.hpp
src/: serial.cpp  test_fdcl_serial.cpp
